# underwrite-ai

./: .gitignore  main.py  pyproject.toml
model/: train.py
spark/: aggregations.py  feature_engineering.py  ingestion.py  schemas.py
