[project]
name = "underwrite-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.3.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "numpy<2.0",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
    "scikit-learn>=1.8.0",
]
